# inspire_hand_ros

./: .gitignore  README.md
inspire_hand_description/: CMakeLists.txt  package.xml
inspire_hand_description/config/: view_hand.rviz
inspire_hand_description/launch/: view_hand.launch.py  view_hand_gui.launch.py
inspire_hand_description/urdf/: inspire_hand_left.urdf
inspire_hand_description/urdf/meshes/visual/: convert_glb_to_dae.sh
inspire_hand_driver/: package.xml  setup.cfg  setup.py
inspire_hand_driver/inspire_hand_driver/: cmd_from_vision_pro.py  hand_wrapper.py  inspire_hand_action_server.py  inspire_hand_driver.py  test_open_close.py  test_retargeting.py
inspire_hand_driver/inspire_hand_driver/utils/: retargeting_utils.py
inspire_hand_driver/launch/: both_hand.launch.py  hand_control.launch.py  left_hand.launch.py  right_hand.launch.py  view_hand.launch.py
inspire_hand_driver/script/: retargeting.py  save_vision_pro_stream.py
inspire_hand_msgs/: CMakeLists.txt  package.xml
inspire_hand_msgs/msg/: InspireHandCmd.msg  InspireHandStat.msg
